package edu.hitsz.FactoryPattern;
import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.aircraft.JokerEnemy;
import edu.hitsz.application.ImageManager;
import edu.hitsz.application.Main;

public class JokerEnemyFactory implements EnemyFactory{
    @Override
    public AbstractAircraft createAircraft() {
        return new JokerEnemy(
                (int) (Math.random() * (Main.WINDOW_WIDTH - ImageManager.MOB_ENEMY_IMAGE.getWidth())),
                (int) (Math.random() * Main.WINDOW_HEIGHT * 0.05),
                3,
                10,
                120
        );
    }
}
